<resources>
    <string name="app_name">Цифровой завхоз</string>

    <string name="tasks">Заявки</string>
    <string name="taskLegacy">Заявка</string>

    <string name="new_tasks_text">Новые заявки</string>
    <string name="progress_tasks">Заявки в работе</string>
    <string name="archive_tasks_text">Архивные заявки</string>
    <string name="completed_tasks_text">Завершенные заявки</string>

    <string name="tasks_creator">Создатель заявки</string>
    <string name="history_text">История</string>

    <string name="address">Адрес</string>
    <string name="comment">Коментарий</string>
    <string name="no_comment">Нет коментариев к заявке</string>
    <string name="status">Статус</string>
    <string name="delete">Удалить</string>
    <string name="floor">Этаж</string>
    <string name="cabinet">Кабинет</string>
    <string name="name_task">Название заявки</string>
    <string name="optional">Опционально</string>
    <string name="date_complete">Дата выполнения</string>
    <string name="executor">Исполнитель</string>
    <string name="set_executor">назначить исполнителя</string>
    <string name="done">Готово</string>

    <string name="authorization">Авторизация</string>
    <string name="email_text">E-mail</string>
    <string name="username_text">Username</string>
    <string name="password">Пароль</string>
    <string name="login">Войти</string>

    <string name="registration">Регистрация</string>
    <string name="name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="patronymic">Отчество</string>
    <string name="role_text">Роль</string>
    <string name="permission_text">Разрешения</string>
    <string name="add_user">добавить пользователя</string>

    <string name="ost_stork_text">ОП «Аист»</string>
    <string name="ost_berry_text">ОП «Ягодка»</string>
    <string name="bar_stream_text">ОП «Ручеек»</string>
    <string name="bar_star_text">ОП «Звездочка»</string>
    <string name="new_task">Новая заявка</string>
    <string name="ost_text">ОП «Остафьевская»</string>
    <string name="bar_text"> ОП «Барыши»</string>

    <string name="bar_school_address">Местечко Барыши, 25</string>
    <string name="bar_rucheek_address">Местечко Барыши, 37</string>
    <string name="bar_zvezdochka_address">Барышевская Роща, 16</string>

    <string name="ost_aist_address">Остафьевская улица, 2</string>
    <string name="ost_yagodka_address">Берёзовая улица, 2</string>

    <string name="users_text">Пользователи</string>
    <string name="add_new_user">Добавить нового пользователя</string>
    <string name="edit_data_user">Редактировать данные пользователей</string>
    <string name="logout">выйти из аккаунта</string>
    <string name="profile">Профиль</string>
    <string name="settings">Настройки</string>

    <string name="editing">Редактирование</string>
    <string name="save">Сохранить</string>

    <string name="admins">Администраторы</string>
    <string name="executors">Исполнители</string>

    <string name="warning">Внимание!</string>
    <string name="warning_no_connection">Отсутствует интернет подключение. Вы можете сохранить заявку у себя в телефоне и когда интернет снова появиться, заявка автоматически будет отправлена в фоновом режиме. Или вы можете отправить заявку позже, когда появиться интернет.</string>
    <string name="warning_no_connection_main">Отсутствует интернет подключение.</string>
    <string name="warning_delete_task">Выдействительно хотите удалить заявку? Восстановить удаленную заявку невозможно.</string>
    <string name="warning_delete_user">Выдействительно хотите удалить этого пользователя? Восстановить удаленного пользователя невозможно.</string>

    <string name="error_no_connection">Ошибка! Проверьте подключение к интернету</string>

    <string name="letter">Литера</string>
    <string name="create">Создать</string>
    <string name="main">Главная</string>
    <string name="my_tasks">Мои заявки</string>
    <string name="all_tasks">Все заявки</string>
    <string name="urgent_tasks">Срочные заявки</string>

    <string name="new_school_full_text">Авиаторов 9. Старшая школа</string>
    <string name="old_school_full_text">Авиаторов 9. Начальная школа</string>

    <string name="old_school">Начальная школа</string>
    <string name="new_school">Старшая школа</string>

    <string name="urgent_task">Срочная заявка</string>
    <string name="urgent_task_description">Обратите внимание на эту заявку и выполните всё в срок</string>
    <string name="login_executor">Логин исполнителя</string>
    <string name="add_image_text">Добавить изображение</string>
    <string name="take_photo">Сделать фотографию</string>
    <string name="choose_existing">Выбрать на устройстве</string>
    <string name="download">Скачать</string>
    <string name="rotate">Повернуть</string>
    <string name="app">Приложение</string>
    <string name="share">Поделиться</string>

    <string name="permission_gallery">Для того, чтобы загрузить изображение необходимо разрешить Palladium доступ файловому хранилищу</string>
    <string name="permission_camera">Для того, чтобы загрузить изображение необходимо разрешить Palladium доступ к камере</string>
    <string name="text_help">Поддержка</string>
    <string name="text_send_email">Выберите приложение для отправки электронного письма разработчику приложения</string>
    <string name="email_developer">georgyfilatov@yandex.ru</string>
    <string name="url_download_text_help"><![CDATA[https://docs.google.com/document/d/1jP6xACZYv3jYBoPE7f2TmiBpjqu8xRNC/edit?usp=sharing&ouid=107837366117826648347&rtpof=true&sd=true]]></string>
    <string name="show_text">Показать</string>
    <string name="root_permission">All</string>
    <string name="url_full_document"><![CDATA[https://docs.google.com/document/d/1YGy2YM9jFOcPkwCeRWDB2iy_AiDoriyR/edit?usp=sharing&ouid=107837366117826648347&rtpof=true&sd=true]]></string>
    <string name="add_image_to_end_text">Ваше изображение отображено в коне формы заявки</string>

</resources>