<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="340dp"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task"
            android:textColor="@color/black"
            android:textSize="22sp" />

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:src="@drawable/line_gray"
        android:layout_marginTop="12dp"
        tools:ignore="ContentDescription" />

    <RadioGroup
        android:checkedButton="@+id/radio_button_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radio_button_new_task"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/new_task" />

        <RadioButton
            android:id="@+id/radio_button_progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/progress_tasks" />

        <RadioButton
            android:id="@+id/radio_button_archive"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/archive_tasks_text" />

    </RadioGroup>

    <Button
        android:id="@+id/done_btn_executor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton" />

</LinearLayout>