<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp" >

        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleLine="true"
            app:checkedChip="@+id/chip_all_tasks_executor"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_all_tasks_executor"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_tasks" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_urgent_tasks_executor"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/urgent_task" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_old_school_tasks_executor"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/old_school" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_new_school_tasks_executor"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_school" />

        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_tasks_executor"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>