<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="22sp"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/close_btn"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_baseline_close_24"
            android:layout_alignParentEnd="true"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:src="@drawable/line_gray"
        android:layout_marginTop="12dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/users_text"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:layout_marginTop="20dp"/>

    <RelativeLayout
        android:id="@+id/layout_new_person"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        tools:targetApi="m"
        tools:ignore="UnusedAttribute">

        <ImageView
            android:id="@+id/following_image_sheet"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_baseline_person_add_24"
            android:layout_centerVertical="true"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_user"
            android:layout_toEndOf="@id/following_image_sheet"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_edit_person"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        tools:targetApi="m"
        tools:ignore="UnusedAttribute">

        <ImageView
            android:id="@+id/following_edit_sheet"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_baseline_edit_24"
            android:layout_centerVertical="true"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_data_user"
            android:layout_toEndOf="@id/following_edit_sheet"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Приложение"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btn_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textColor="#E73C3C"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_marginTop="5dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="100dp" />


</LinearLayout>